added batch executors

--- a/recordings/1 - generate stats.ipynb
+++ b/recordings/1 - generate stats.ipynb
@@ -7,8 +7,7 @@
     "tags": []
    },
    "source": [
-    "import cudf.pandas\n",
-    "cudf.pandas.install()"
+    "install ffmpeg with `winget install ffmpeg`"
    ]
   },
   {
@@ -45,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-12-22 17:42:54 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - retrieved 409 files\n"
+      "2023-12-27 04:26:14 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - retrieved 414 files\n"
      ]
     }
    ],
@@ -66,31 +65,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " |████████████████████████████████████████████████████████████████████████████████████████████████████| 100.0% \n"
+      "2023-12-27 04:26:34 - \u001b[33mWARNING\u001b[0m - \u001b[34mfile_info\u001b[0m - encountered error for /Users/konrad/OneDrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\\Henryk 2023-12-24 Życzenia Boże Narodzenie 2023.m4a\n",
+      "2023-12-27 04:26:34 - \u001b[33mWARNING\u001b[0m - \u001b[34mfile_info\u001b[0m - encountered error for /Users/konrad/OneDrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\\Henryk 2023-12-26 Tatuś opowiada o spotkaniu rodzinnym a Miś Uszatek poznaje nowych przyjaciół.m4a\n",
+      " |██████████████████████████████████████████████████| 100.0% \n"
      ]
     }
    ],
    "source": [
     "def file_info(path: str) -> dict:\n",
     "    _recording_info = {}\n",
-    "    _info = mediainfo(path)\n",
-    "    _recording_filename = os.path.basename(path)\n",
-    "    _filename_groups = re.search('^(.+) (\\d+-\\d+-\\d+) (.+)\\.(.+)$', _recording_filename)\n",
-    "    _recording_kind = _filename_groups[1]\n",
-    "    _recording_date = _filename_groups[2]\n",
-    "    _recording_date = datetime.strptime(_recording_date, \"%Y-%m-%d\")\n",
-    "    _recording_name = _filename_groups[3]\n",
-    "    _recording_type = _filename_groups[4]\n",
-    "    _recording_duration = _info['duration']\n",
     "\n",
-    "    _recording_info = {\n",
-    "        'file': _recording_filename,\n",
-    "        'name': _recording_name,\n",
-    "        'kind': _recording_kind,\n",
-    "        'date': _recording_date,\n",
-    "        'type': _recording_type,\n",
-    "        'duration': _recording_duration\n",
-    "    }\n",
+    "    try:\n",
+    "        _info = mediainfo(path)\n",
+    "        _recording_filename = os.path.basename(path)\n",
+    "        _filename_groups = re.search('^(.+) (\\d+-\\d+-\\d+) (.+)\\.(.+)$', _recording_filename)\n",
+    "        _recording_kind = _filename_groups[1]\n",
+    "        _recording_date = _filename_groups[2]\n",
+    "        _recording_date = datetime.strptime(_recording_date, \"%Y-%m-%d\")\n",
+    "        _recording_name = _filename_groups[3]\n",
+    "        _recording_type = _filename_groups[4]\n",
+    "        _recording_duration = _info['duration']\n",
+    "    \n",
+    "        _recording_info = {\n",
+    "            'file': _recording_filename,\n",
+    "            'name': _recording_name,\n",
+    "            'kind': _recording_kind,\n",
+    "            'date': _recording_date,\n",
+    "            'type': _recording_type,\n",
+    "            'duration': _recording_duration\n",
+    "        }\n",
+    "    except Exception as e:\n",
+    "        logger.warning(f'encountered error for {path}')\n",
+    "        return None\n",
     "    \n",
     "    return _recording_info\n",
     "\n",
@@ -98,7 +104,8 @@
     "for ix, i in enumerate(range(0,len(recordings_files))):\n",
     "    printProgressBar(ix,len(recordings_files)-1)\n",
     "    _row = file_info(recordings_files[i])\n",
-    "    df.loc[len(df)] = _row"
+    "    if _row != None:\n",
+    "        df.loc[len(df)] = _row"
    ]
   },
   {
