--- a/notebooks/recordings/1 - generate stats.ipynb
+++ b/notebooks/recordings/1 - generate stats.ipynb
@@ -15,9 +15,28 @@
    "execution_count": 1,
    "id": "30ab3234-8205-4a1e-9d64-0fe7f64a6288",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-04T13:39:32.955199Z",
+     "iopub.status.busy": "2024-05-04T13:39:32.954906Z",
+     "iopub.status.idle": "2024-05-04T13:39:34.713198Z",
+     "shell.execute_reply": "2024-05-04T13:39:34.711977Z",
+     "shell.execute_reply.started": "2024-05-04T13:39:32.955176Z"
+    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pydub'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mglob\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m glob\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpydub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mediainfo\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlogger\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pydub'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -44,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-12-27 04:26:14 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - retrieved 414 files\n"
+      "2024-03-13 22:16:10 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - retrieved 463 files\n"
      ]
     }
    ],
@@ -57,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "7a368292-147f-4a64-adcb-ef9f941df02a",
    "metadata": {},
    "outputs": [
@@ -65,8 +84,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-12-27 04:26:34 - \u001b[33mWARNING\u001b[0m - \u001b[34mfile_info\u001b[0m - encountered error for /Users/konrad/OneDrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\\Henryk 2023-12-24 Życzenia Boże Narodzenie 2023.m4a\n",
-      "2023-12-27 04:26:34 - \u001b[33mWARNING\u001b[0m - \u001b[34mfile_info\u001b[0m - encountered error for /Users/konrad/OneDrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\\Henryk 2023-12-26 Tatuś opowiada o spotkaniu rodzinnym a Miś Uszatek poznaje nowych przyjaciół.m4a\n",
       " |██████████████████████████████████████████████████| 100.0% \n"
      ]
     }
@@ -77,17 +94,17 @@
     "\n",
     "    try:\n",
     "        _info = mediainfo(path)\n",
-    "        _recording_filename = os.path.basename(path)\n",
-    "        _filename_groups = re.search('^(.+) (\\d+-\\d+-\\d+) (.+)\\.(.+)$', _recording_filename)\n",
-    "        _recording_kind = _filename_groups[1]\n",
-    "        _recording_date = _filename_groups[2]\n",
+    "        _filename = os.path.basename(path)\n",
+    "        _filename_regex_groups = re.search('^(.+) (\\d+-\\d+-\\d+) (.+)\\.(.+)$', _filename) # kind, date, name, extension\n",
+    "        _recording_kind = _filename_regex_groups[1]\n",
+    "        _recording_date = _filename_regex_groups[2]\n",
     "        _recording_date = datetime.strptime(_recording_date, \"%Y-%m-%d\")\n",
-    "        _recording_name = _filename_groups[3]\n",
-    "        _recording_type = _filename_groups[4]\n",
+    "        _recording_name = _filename_regex_groups[3]\n",
+    "        _recording_type = _filename_regex_groups[4]\n",
     "        _recording_duration = _info['duration']\n",
     "    \n",
     "        _recording_info = {\n",
-    "            'file': _recording_filename,\n",
+    "            'file': _filename,\n",
     "            'name': _recording_name,\n",
     "            'kind': _recording_kind,\n",
     "            'date': _recording_date,\n",
@@ -95,7 +112,7 @@
     "            'duration': _recording_duration\n",
     "        }\n",
     "    except Exception as e:\n",
-    "        logger.warning(f'encountered error for {path}')\n",
+    "        logger.warning(f'encountered error for {path}: {e}')\n",
     "        return None\n",
     "    \n",
     "    return _recording_info\n",
@@ -110,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "76b7c686-e201-4874-b0c1-8a74024605c4",
    "metadata": {},
    "outputs": [],
@@ -134,9 +151,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -148,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
