fixed generation of the dataset to include filepath

--- a/notebooks/recordings/1 - generate stats.ipynb
+++ b/notebooks/recordings/1 - generate stats.ipynb
@@ -23,11 +23,11 @@
    "id": "5daef15c-82f4-4e3e-b256-c0e53ab05ec5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:02:00.031659Z",
-     "iopub.status.busy": "2024-05-04T14:02:00.031399Z",
-     "iopub.status.idle": "2024-05-04T14:02:00.051519Z",
-     "shell.execute_reply": "2024-05-04T14:02:00.050568Z",
-     "shell.execute_reply.started": "2024-05-04T14:02:00.031631Z"
+     "iopub.execute_input": "2024-05-04T14:48:42.569160Z",
+     "iopub.status.busy": "2024-05-04T14:48:42.568501Z",
+     "iopub.status.idle": "2024-05-04T14:48:42.667899Z",
+     "shell.execute_reply": "2024-05-04T14:48:42.666681Z",
+     "shell.execute_reply.started": "2024-05-04T14:48:42.569133Z"
     },
     "tags": []
    },
@@ -43,11 +43,11 @@
    "id": "30ab3234-8205-4a1e-9d64-0fe7f64a6288",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:02:00.053419Z",
-     "iopub.status.busy": "2024-05-04T14:02:00.052843Z",
-     "iopub.status.idle": "2024-05-04T14:02:01.395879Z",
-     "shell.execute_reply": "2024-05-04T14:02:01.394946Z",
-     "shell.execute_reply.started": "2024-05-04T14:02:00.053386Z"
+     "iopub.execute_input": "2024-05-04T14:48:42.672870Z",
+     "iopub.status.busy": "2024-05-04T14:48:42.672483Z",
+     "iopub.status.idle": "2024-05-04T14:48:44.296637Z",
+     "shell.execute_reply": "2024-05-04T14:48:44.295550Z",
+     "shell.execute_reply.started": "2024-05-04T14:48:42.672840Z"
     },
     "tags": []
    },
@@ -86,11 +86,11 @@
    "id": "b85b2e7d-266b-48b3-a9b5-b1d95615676c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:02:01.399321Z",
-     "iopub.status.busy": "2024-05-04T14:02:01.398602Z",
-     "iopub.status.idle": "2024-05-04T14:02:01.423923Z",
-     "shell.execute_reply": "2024-05-04T14:02:01.422953Z",
-     "shell.execute_reply.started": "2024-05-04T14:02:01.399290Z"
+     "iopub.execute_input": "2024-05-04T14:48:44.299521Z",
+     "iopub.status.busy": "2024-05-04T14:48:44.298794Z",
+     "iopub.status.idle": "2024-05-04T14:48:44.332807Z",
+     "shell.execute_reply": "2024-05-04T14:48:44.331644Z",
+     "shell.execute_reply.started": "2024-05-04T14:48:44.299494Z"
     }
    },
    "outputs": [
@@ -98,8 +98,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-04 14:02:01 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using csv file: ../../data/processed/henryk_audio_stats.csv\n",
-      "2024-05-04 14:02:01 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using audio files path: /mnt/onedrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\n"
+      "2024-05-04 14:48:44 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using csv file: ../../data/processed/henryk_audio_stats.csv\n",
+      "2024-05-04 14:48:44 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using audio files path: /mnt/onedrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\n"
      ]
     }
    ],
@@ -123,11 +123,11 @@
    "id": "fe77121e-0291-4d6e-aca2-89c2c43e45aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:02:01.425663Z",
-     "iopub.status.busy": "2024-05-04T14:02:01.425134Z",
-     "iopub.status.idle": "2024-05-04T14:02:01.514955Z",
-     "shell.execute_reply": "2024-05-04T14:02:01.513884Z",
-     "shell.execute_reply.started": "2024-05-04T14:02:01.425621Z"
+     "iopub.execute_input": "2024-05-04T14:48:44.334293Z",
+     "iopub.status.busy": "2024-05-04T14:48:44.333965Z",
+     "iopub.status.idle": "2024-05-04T14:48:44.424597Z",
+     "shell.execute_reply": "2024-05-04T14:48:44.423638Z",
+     "shell.execute_reply.started": "2024-05-04T14:48:44.334272Z"
     }
    },
    "outputs": [
@@ -135,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-04 14:02:01 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - retrieved 499 files\n"
+      "2024-05-04 14:48:44 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - retrieved 499 files\n"
      ]
     }
    ],
@@ -147,15 +147,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "7a368292-147f-4a64-adcb-ef9f941df02a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:02:01.516507Z",
-     "iopub.status.busy": "2024-05-04T14:02:01.516240Z",
-     "iopub.status.idle": "2024-05-04T14:02:27.248465Z",
-     "shell.execute_reply": "2024-05-04T14:02:27.247525Z",
-     "shell.execute_reply.started": "2024-05-04T14:02:01.516480Z"
+     "iopub.execute_input": "2024-05-04T14:50:46.628282Z",
+     "iopub.status.busy": "2024-05-04T14:50:46.627345Z",
+     "iopub.status.idle": "2024-05-04T14:51:21.866992Z",
+     "shell.execute_reply": "2024-05-04T14:51:21.865507Z",
+     "shell.execute_reply.started": "2024-05-04T14:50:46.628244Z"
     }
    },
    "outputs": [
@@ -178,6 +178,7 @@
     "    try:\n",
     "        _info = mediainfo(path)\n",
     "        _filename = os.path.basename(path)\n",
+    "        _filepath = path.replace(DIR_WIADOMOSCI_DO_HENRYCZKA + '/', '')\n",
     "        _filename_regex_groups = re.search('^(.+) (\\d+-\\d+-\\d+) (.+)\\.(.+)$', _filename) # kind, date, name, extension\n",
     "        _recording_kind = _filename_regex_groups[1]\n",
     "        _recording_date = _filename_regex_groups[2]\n",
@@ -187,6 +188,7 @@
     "        _recording_duration = _info['duration']\n",
     "    \n",
     "        _recording_info = {\n",
+    "            'path': _filepath,\n",
     "            'file': _filename,\n",
     "            'name': _recording_name,\n",
     "            'kind': _recording_kind,\n",
@@ -200,7 +202,8 @@
     "    \n",
     "    return _recording_info\n",
     "\n",
-    "df = pd.DataFrame( {'file': [], 'name': [], 'kind': [], 'date': [], 'type': [], 'duration': []} )\n",
+    "# iterate over files and produce entries for the dataset\n",
+    "df = pd.DataFrame( {'path': [], 'file': [], 'name': [], 'kind': [], 'date': [], 'type': [], 'duration': []} )\n",
     "for ix, i in enumerate(range(0,len(recordings_files))):\n",
     "    printProgressBar(ix,len(recordings_files)-1, prefix=f'processing {len(recordings_files)} audio files')\n",
     "    _row = get_file_info(recordings_files[i])\n",
@@ -209,16 +212,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d81a0f80-8554-4a03-97a6-17d3aa794b92",
+   "metadata": {},
+   "source": [
+    "## Write data to file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "76b7c686-e201-4874-b0c1-8a74024605c4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:02:27.249655Z",
-     "iopub.status.busy": "2024-05-04T14:02:27.249500Z",
-     "iopub.status.idle": "2024-05-04T14:02:27.283942Z",
-     "shell.execute_reply": "2024-05-04T14:02:27.283161Z",
-     "shell.execute_reply.started": "2024-05-04T14:02:27.249640Z"
+     "iopub.execute_input": "2024-05-04T14:51:23.847435Z",
+     "iopub.status.busy": "2024-05-04T14:51:23.846948Z",
+     "iopub.status.idle": "2024-05-04T14:51:23.900958Z",
+     "shell.execute_reply": "2024-05-04T14:51:23.899518Z",
+     "shell.execute_reply.started": "2024-05-04T14:51:23.847404Z"
     }
    },
    "outputs": [],
