--- a/notebooks/recordings/2 - analyse stats.ipynb
+++ b/notebooks/recordings/2 - analyse stats.ipynb
@@ -22,11 +22,11 @@
    "id": "0dc3ed69-d542-409c-8972-73704d390982",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:39:28.697939Z",
-     "iopub.status.busy": "2024-05-04T14:39:28.697666Z",
-     "iopub.status.idle": "2024-05-04T14:39:28.811451Z",
-     "shell.execute_reply": "2024-05-04T14:39:28.810320Z",
-     "shell.execute_reply.started": "2024-05-04T14:39:28.697916Z"
+     "iopub.execute_input": "2024-05-04T14:51:34.448496Z",
+     "iopub.status.busy": "2024-05-04T14:51:34.448166Z",
+     "iopub.status.idle": "2024-05-04T14:51:34.508276Z",
+     "shell.execute_reply": "2024-05-04T14:51:34.507223Z",
+     "shell.execute_reply.started": "2024-05-04T14:51:34.448464Z"
     },
     "tags": []
    },
@@ -42,11 +42,11 @@
    "id": "30ab3234-8205-4a1e-9d64-0fe7f64a6288",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:39:30.476634Z",
-     "iopub.status.busy": "2024-05-04T14:39:30.476281Z",
-     "iopub.status.idle": "2024-05-04T14:39:32.036959Z",
-     "shell.execute_reply": "2024-05-04T14:39:32.035895Z",
-     "shell.execute_reply.started": "2024-05-04T14:39:30.476611Z"
+     "iopub.execute_input": "2024-05-04T14:51:34.510392Z",
+     "iopub.status.busy": "2024-05-04T14:51:34.509775Z",
+     "iopub.status.idle": "2024-05-04T14:51:36.333261Z",
+     "shell.execute_reply": "2024-05-04T14:51:36.332294Z",
+     "shell.execute_reply.started": "2024-05-04T14:51:34.510357Z"
     }
    },
    "outputs": [],
@@ -75,11 +75,11 @@
    "id": "fe77121e-0291-4d6e-aca2-89c2c43e45aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:39:40.766858Z",
-     "iopub.status.busy": "2024-05-04T14:39:40.765948Z",
-     "iopub.status.idle": "2024-05-04T14:39:40.829369Z",
-     "shell.execute_reply": "2024-05-04T14:39:40.828133Z",
-     "shell.execute_reply.started": "2024-05-04T14:39:40.766818Z"
+     "iopub.execute_input": "2024-05-04T14:51:36.334979Z",
+     "iopub.status.busy": "2024-05-04T14:51:36.334476Z",
+     "iopub.status.idle": "2024-05-04T14:51:36.396546Z",
+     "shell.execute_reply": "2024-05-04T14:51:36.395248Z",
+     "shell.execute_reply.started": "2024-05-04T14:51:36.334905Z"
     }
    },
    "outputs": [],
@@ -105,11 +105,11 @@
    "id": "45b5426a-1dde-4f21-88cf-d402ee8b8d80",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:39:48.698604Z",
-     "iopub.status.busy": "2024-05-04T14:39:48.697322Z",
-     "iopub.status.idle": "2024-05-04T14:39:48.783313Z",
-     "shell.execute_reply": "2024-05-04T14:39:48.782116Z",
-     "shell.execute_reply.started": "2024-05-04T14:39:48.698050Z"
+     "iopub.execute_input": "2024-05-04T14:51:36.399509Z",
+     "iopub.status.busy": "2024-05-04T14:51:36.398905Z",
+     "iopub.status.idle": "2024-05-04T14:51:36.477140Z",
+     "shell.execute_reply": "2024-05-04T14:51:36.476103Z",
+     "shell.execute_reply.started": "2024-05-04T14:51:36.399476Z"
     }
    },
    "outputs": [],
@@ -165,11 +165,11 @@
    "id": "40fec2dd-394a-4821-9bc8-b09be8eace5c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:39:54.744734Z",
-     "iopub.status.busy": "2024-05-04T14:39:54.743568Z",
-     "iopub.status.idle": "2024-05-04T14:39:56.452221Z",
-     "shell.execute_reply": "2024-05-04T14:39:56.450016Z",
-     "shell.execute_reply.started": "2024-05-04T14:39:54.744704Z"
+     "iopub.execute_input": "2024-05-04T14:51:36.478694Z",
+     "iopub.status.busy": "2024-05-04T14:51:36.478295Z",
+     "iopub.status.idle": "2024-05-04T14:51:38.465828Z",
+     "shell.execute_reply": "2024-05-04T14:51:38.464514Z",
+     "shell.execute_reply.started": "2024-05-04T14:51:36.478666Z"
     }
    },
    "outputs": [
@@ -220,25 +220,237 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "93dd3fa1-7dc4-414e-8013-8cd099485ece",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1a56a369-3f78-4c10-947f-78cd083f098e",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-04T14:51:38.467316Z",
+     "iopub.status.busy": "2024-05-04T14:51:38.466885Z",
+     "iopub.status.idle": "2024-05-04T14:51:38.515279Z",
+     "shell.execute_reply": "2024-05-04T14:51:38.513971Z",
+     "shell.execute_reply.started": "2024-05-04T14:51:38.467281Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>path</th>\n",
+       "      <th>file</th>\n",
+       "      <th>name</th>\n",
+       "      <th>kind</th>\n",
+       "      <th>date</th>\n",
+       "      <th>type</th>\n",
+       "      <th>duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022/Henryk 2022-05-26 Bajka o nowym samochodz...</td>\n",
+       "      <td>Henryk 2022-05-26 Bajka o nowym samochodziku.m4a</td>\n",
+       "      <td>Bajka o nowym samochodziku</td>\n",
+       "      <td>Henryk</td>\n",
+       "      <td>2022-05-26</td>\n",
+       "      <td>m4a</td>\n",
+       "      <td>466.688000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022/Henryk 2022-05-27 Bajka o Eryku r1.m4a</td>\n",
+       "      <td>Henryk 2022-05-27 Bajka o Eryku r1.m4a</td>\n",
+       "      <td>Bajka o Eryku r1</td>\n",
+       "      <td>Henryk</td>\n",
+       "      <td>2022-05-27</td>\n",
+       "      <td>m4a</td>\n",
+       "      <td>546.154667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022/Henryk 2022-05-28 Bajka o swince peppie i...</td>\n",
+       "      <td>Henryk 2022-05-28 Bajka o swince peppie i domu...</td>\n",
+       "      <td>Bajka o swince peppie i domu rebeki</td>\n",
+       "      <td>Henryk</td>\n",
+       "      <td>2022-05-28</td>\n",
+       "      <td>m4a</td>\n",
+       "      <td>387.264000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022/Henryk 2022-05-30 Bajka o parku dinozauro...</td>\n",
+       "      <td>Henryk 2022-05-30 Bajka o parku dinozaurow.m4a</td>\n",
+       "      <td>Bajka o parku dinozaurow</td>\n",
+       "      <td>Henryk</td>\n",
+       "      <td>2022-05-30</td>\n",
+       "      <td>m4a</td>\n",
+       "      <td>511.658667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022/Henryk 2022-05-31 Bajka o drużynie koszy...</td>\n",
+       "      <td>Henryk 2022-05-31 Bajka o drużynie koszykowki...</td>\n",
+       "      <td>Bajka o drużynie koszykowki</td>\n",
+       "      <td>Henryk</td>\n",
+       "      <td>2022-05-31</td>\n",
+       "      <td>m4a</td>\n",
+       "      <td>492.355918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>494</th>\n",
+       "      <td>Henryk 2024-04-26 Tatuś opowiada o zebraniu w...</td>\n",
+       "      <td>Henryk 2024-04-26 Tatuś opowiada o zebraniu w...</td>\n",
+       "      <td>Tatuś opowiada o zebraniu w żłobku a Kamptoz...</td>\n",
+       "      <td>Henryk</td>\n",
+       "      <td>2024-04-26</td>\n",
+       "      <td>m4a</td>\n",
+       "      <td>1106.730667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>Henryk 2024-04-28 Tatuś opowiada o malowaniu ...</td>\n",
+       "      <td>Henryk 2024-04-28 Tatuś opowiada o malowaniu ...</td>\n",
+       "      <td>Tatuś opowiada o malowaniu krzesełek a Diplod...</td>\n",
+       "      <td>Henryk</td>\n",
+       "      <td>2024-04-28</td>\n",
+       "      <td>m4a</td>\n",
+       "      <td>1025.898667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>Henryk 2024-04-29 Tata opowiada o konkursie i ...</td>\n",
+       "      <td>Henryk 2024-04-29 Tata opowiada o konkursie i ...</td>\n",
+       "      <td>Tata opowiada o konkursie i nagrodach a Gastor...</td>\n",
+       "      <td>Henryk</td>\n",
+       "      <td>2024-04-29</td>\n",
+       "      <td>m4a</td>\n",
+       "      <td>1078.997333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>Henryk 2024-05-01 Tatuś opowiada o dniu pracy...</td>\n",
+       "      <td>Henryk 2024-05-01 Tatuś opowiada o dniu pracy...</td>\n",
+       "      <td>Tatuś opowiada o dniu pracy a Trąbiący dino...</td>\n",
+       "      <td>Henryk</td>\n",
+       "      <td>2024-05-01</td>\n",
+       "      <td>m4a</td>\n",
+       "      <td>1227.306667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>Henryk 2024-05-03 Tatuś opowiada o Rycerzach ...</td>\n",
+       "      <td>Henryk 2024-05-03 Tatuś opowiada o Rycerzach ...</td>\n",
+       "      <td>Tatuś opowiada o Rycerzach i Zamkach a Prapłe...</td>\n",
+       "      <td>Henryk</td>\n",
+       "      <td>2024-05-03</td>\n",
+       "      <td>m4a</td>\n",
+       "      <td>1116.394667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>499 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  path  \\\n",
+       "0    2022/Henryk 2022-05-26 Bajka o nowym samochodz...   \n",
+       "1          2022/Henryk 2022-05-27 Bajka o Eryku r1.m4a   \n",
+       "2    2022/Henryk 2022-05-28 Bajka o swince peppie i...   \n",
+       "3    2022/Henryk 2022-05-30 Bajka o parku dinozauro...   \n",
+       "4    2022/Henryk 2022-05-31 Bajka o drużynie koszy...   \n",
+       "..                                                 ...   \n",
+       "494  Henryk 2024-04-26 Tatuś opowiada o zebraniu w...   \n",
+       "495  Henryk 2024-04-28 Tatuś opowiada o malowaniu ...   \n",
+       "496  Henryk 2024-04-29 Tata opowiada o konkursie i ...   \n",
+       "497  Henryk 2024-05-01 Tatuś opowiada o dniu pracy...   \n",
+       "498  Henryk 2024-05-03 Tatuś opowiada o Rycerzach ...   \n",
+       "\n",
+       "                                                  file  \\\n",
+       "0     Henryk 2022-05-26 Bajka o nowym samochodziku.m4a   \n",
+       "1               Henryk 2022-05-27 Bajka o Eryku r1.m4a   \n",
+       "2    Henryk 2022-05-28 Bajka o swince peppie i domu...   \n",
+       "3       Henryk 2022-05-30 Bajka o parku dinozaurow.m4a   \n",
+       "4    Henryk 2022-05-31 Bajka o drużynie koszykowki...   \n",
+       "..                                                 ...   \n",
+       "494  Henryk 2024-04-26 Tatuś opowiada o zebraniu w...   \n",
+       "495  Henryk 2024-04-28 Tatuś opowiada o malowaniu ...   \n",
+       "496  Henryk 2024-04-29 Tata opowiada o konkursie i ...   \n",
+       "497  Henryk 2024-05-01 Tatuś opowiada o dniu pracy...   \n",
+       "498  Henryk 2024-05-03 Tatuś opowiada o Rycerzach ...   \n",
+       "\n",
+       "                                                  name    kind       date  \\\n",
+       "0                           Bajka o nowym samochodziku  Henryk 2022-05-26   \n",
+       "1                                     Bajka o Eryku r1  Henryk 2022-05-27   \n",
+       "2                  Bajka o swince peppie i domu rebeki  Henryk 2022-05-28   \n",
+       "3                             Bajka o parku dinozaurow  Henryk 2022-05-30   \n",
+       "4                         Bajka o drużynie koszykowki  Henryk 2022-05-31   \n",
+       "..                                                 ...     ...        ...   \n",
+       "494  Tatuś opowiada o zebraniu w żłobku a Kamptoz...  Henryk 2024-04-26   \n",
+       "495  Tatuś opowiada o malowaniu krzesełek a Diplod...  Henryk 2024-04-28   \n",
+       "496  Tata opowiada o konkursie i nagrodach a Gastor...  Henryk 2024-04-29   \n",
+       "497  Tatuś opowiada o dniu pracy a Trąbiący dino...  Henryk 2024-05-01   \n",
+       "498  Tatuś opowiada o Rycerzach i Zamkach a Prapłe...  Henryk 2024-05-03   \n",
+       "\n",
+       "    type     duration  \n",
+       "0    m4a   466.688000  \n",
+       "1    m4a   546.154667  \n",
+       "2    m4a   387.264000  \n",
+       "3    m4a   511.658667  \n",
+       "4    m4a   492.355918  \n",
+       "..   ...          ...  \n",
+       "494  m4a  1106.730667  \n",
+       "495  m4a  1025.898667  \n",
+       "496  m4a  1078.997333  \n",
+       "497  m4a  1227.306667  \n",
+       "498  m4a  1116.394667  \n",
+       "\n",
+       "[499 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# References\n",
-    "- https://www.kaggle.com/code/robikscube/working-with-audio-in-python\n",
-    "- https://towardsdatascience.com/get-to-know-audio-feature-extraction-in-python-a499fdaefe42\n",
-    "- https://stackoverflow.com/questions/55669182/how-to-fix-filenotfounderror-winerror-2-the-system-cannot-find-the-file-speci"
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8df9e4b2-9f72-41d1-8843-b651c0a7cd5b",
+   "id": "c9e9d096-5a27-4f3a-a689-a223c46bd072",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# ax.xaxis.set_major_formatter(mdates.DateFormatter('%H:%M'))     #optional formatting \n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
